--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,6 @@
 {
   "version": 2,
-  "name": "linkedin-analyzer",
-  "builds": [
-    {
-      "src": "web/**",
-      "use": "@vercel/static"
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/web/$1"
-    }
-  ],
+  "outputDirectory": "web",
   "headers": [
     {
       "source": "/(.*)",
